# mpd-albumart

./: README.md  mpd-albumart.cabal  stack.yaml
app/: CoverArtArchive.hs  Logging.hs  MPDClient.hs  Main.hs
app/CoverArtArchive/: Errors.hs  Internal.hs  Types.hs
app/Music/: MusicBrainz.hs
app/Music/MPD/AlbumArt/Event/: SystemChange.hs
app/Music/MusicBrainz/: Types.hs  WebService.hs
src/: Lib.hs
src/CoverArtArchive/: Errors.hs  Types.hs
src/Music/: MusicBrainz.hs
src/Music/MPD/AlbumArt/Event/: SystemChange.hs
src/Music/MusicBrainz/: Types.hs
