name:                mpd-albumart
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/mpd-albumart#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
                     , CoverArtArchive
                     , Music.MusicBrainz
                     , Music.MusicBrainz.Types
                     , Music.MusicBrainz.WebService
                     , Music.MPD.AlbumArt.Event.SystemChange
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , bytestring
                     , conduit
                     , conduit-extra
                     , http-client-tls
                     , http-conduit
                     , http-media
                     , http-types
                     , libmpd
                     , monad-control
                     , network-uri
                     , resourcet
                     , sdl2
                     , sdl2-image
                     , servant
                     , servant-client
                     , text
                     , containers
                     , safe
                     , safe-exceptions
                     , uuid-types
                     , xml-conduit
                     , xml-types
                     , HTTP
  default-language:    Haskell2010

executable mpd-albumart-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , mpd-albumart
  default-language:    Haskell2010

test-suite mpd-albumart-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , mpd-albumart
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/mpd-albumart
