name:                mpd-albumart
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/mpd-albumart#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable mpd-albumart
  hs-source-dirs:      app
  main-is:             Main.hs
  other-modules:       CoverArtArchive
                     , CoverArtArchive.Errors
                     , CoverArtArchive.Internal
                     , CoverArtArchive.Types
                     , Logging
                     , Music.MusicBrainz
                     , Music.MusicBrainz.Types
                     , Music.MusicBrainz.WebService
                     , Music.MPD.AlbumArt.Event.SystemChange
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , bytestring
                     , conduit
                     , conduit-extra
                     , http-client-tls
                     , http-conduit
                     , http-media
                     , http-types
                     , libmpd
                     , monad-control
                     , network-uri
                     , protolude
                     , resourcet
                     , sdl2
                     , sdl2-image
                     , servant
                     , servant-client
                     , text
                     , containers
                     , safe
                     , safe-exceptions
                     , uuid-types
                     , xml-conduit
                     , xml-types
                     , HTTP
  default-language:    Haskell2010
  default-extensions:  NoImplicitPrelude

source-repository head
  type:     git
  location: https://github.com/githubuser/mpd-albumart
